Tue Oct 31 10:31:10 UTC 2006  Ossama Othman  <ossama_othman at symantec.com>

        * ace/OS_NS_sys_stat.h (ACE_WSTAT_FUNC_NAME):

          Corrected wstat() function name for Borland.

Mon Oct 30 19:57:20 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * bin/ciao_tests.lst:
        
          Added run_test.pl in CIAO/tests/IDL3/Events/Any to the list of
          CIAO tests to be run automatically.

Mon Oct 30 17:34:35 UTC 2006  Ossama Othman  <ossama_othman at symantec.com>

        * ace/config-win32-common.h:

          Use 64-bit file offsets by default in the WIN64 case, similar to
          what 64-bit UNIX systems do.

Mon Oct 30 17:23:15 UTC 2006  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/wrapper_macros.GNU: Added 2 new build options,
          dmalloc and mtrace. When specified at build time (e.g. make mtrace=1)
          the PLATFORM_DMALLOC_CPPFLAGS and/or PLATFORM_MTRACE_CPPFLAGS values
          are added to CPPFLAGS. For dmalloc, the PLATFORM_DMALLOC_LDFLAGS and
          PLATFORM_DMALLOC_LIBS are added to LDFLAGS and LIBS, respectively.
          Also added the ability to specify additional purify and quantify
          command-line options by setting PLATFORM_PURIFY_OPTIONS and
          PLATFORM_QUANTIFY_OPTIONS, respectively. Thank you to Howard
          Finer for supplying these additions.

Mon Oct 30 16:56:28 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/gnu.mpd:

          The implementation for the 'targetoutdir' template variable was
          incorrect.  Libraries and executables were not symbolically linked
          to the output location correctly.  Also, 'targetoutdir' was not
          taken into account for the 'libpaths' setting.

Mon Oct 30 15:30:47 UTC 2006  Simon McQueen  <sm@prismtech.com>

        * bin/tao_orb_tests.lst:

          Scheduled regression test for bug #2669.

Mon Oct 30 14:31:42 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>
